WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92452
[chromium] Fix color matrix filter computation so that filters that don't need clamping are correctly detected as such
https://bugs.webkit.org/show_bug.cgi?id=92452
Summary
[chromium] Fix color matrix filter computation so that filters that don't nee...
Antoine Labour
Reported
2012-07-26 21:07:58 PDT
[chromium] Fix color matrix filter computation so that filters that don't need clamping are correctly detected as such
Attachments
Patch
(3.98 KB, patch)
2012-07-26 21:09 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.94 KB, patch)
2012-07-27 14:28 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Labour
Comment 1
2012-07-26 21:09:56 PDT
Created
attachment 154828
[details]
Patch
Antoine Labour
Comment 2
2012-07-26 21:23:18 PDT
FYI,
https://bugs.webkit.org/show_bug.cgi?id=92453
adds tests for this, but since it may incur some discussions / runaway refactoring, I wanted to separate this part because it's needed soon.
WebKit Review Bot
Comment 3
2012-07-26 23:55:46 PDT
Attachment 154828
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:12: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Stephen White
Comment 4
2012-07-27 09:19:18 PDT
Comment on
attachment 154828
[details]
Patch Looks good (once style bot is happy). I'll take a look at your other patch on Monday. r=me
Antoine Labour
Comment 5
2012-07-27 14:28:08 PDT
Created
attachment 155048
[details]
Patch for landing
WebKit Review Bot
Comment 6
2012-07-27 16:02:19 PDT
Comment on
attachment 155048
[details]
Patch for landing Clearing flags on attachment: 155048 Committed
r123932
: <
http://trac.webkit.org/changeset/123932
>
WebKit Review Bot
Comment 7
2012-07-27 16:02:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug