[chromium] Fix color matrix filter computation so that filters that don't need clamping are correctly detected as such https://bugs.webkit.org/show_bug.cgi?id=92452

Patch by Antoine Labour <piman@chromium.org> on 2012-07-27
Reviewed by Stephen White.

Because of precision issues, some filters were returning true to
matrixNeedsClamping when they can return false. This fixes it.

No new tests in this CL, a follow-up change refactors the code to add
several tests.

* platform/graphics/chromium/cc/CCRenderSurfaceFilters.cpp:

Canonical link: https://commits.webkit.org/110366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123932 268f45cc-cd09-0410-ab3c-d52691b4dbfc